Fixed tooltips being hidden by navbar

--- a/app/assets/stylesheets/framework_and_overrides.css.scss
+++ b/app/assets/stylesheets/framework_and_overrides.css.scss
@@ -390,3 +390,12 @@ h1, h2, h3, h4, h5 {
 .nav > li.nav-header > a:hover {
     background-color: inherit;
 }
+
+.navbar-fixed-top {
+    z-index: 999
+}
+
+.tooltip {
+    position: fixed;
+    z-index: 1000
+}
